# neural-network-approximator

./: .gitignore  CMakeLists.txt  Main.cpp  README.md
.github/workflows/: Linux.yml
examples/config/: cosine.config  sqr.config  sqrt.config
examples/data-set/: cosine.csv  sqr.csv  sqrt.csv
examples/output/: cosine.csv  cosine.csv.xml  sqr.csv  sqr.csv.xml  sqrt.csv  sqrt.csv.xml
